--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,18 +3,23 @@ version: 0.1
 phases:
   build:
     commands:
-      - git ls-remote https://${GITHUB_TOKEN}@github.com/microservices-today/aws-sushi.git HEAD | awk '{ print $1;}' > master.commit
+      - git ls-remote https://${GITHUB_TOKEN}@github.com/AmalQB/aws-sushi.git HEAD | awk '{ print $1;}' > master.commit
       - docker build -t $ECR_REPO:$(cat ./master.commit) .
-      - sed -i "s@DOCKER_URI@${ECR_REPO}:$(cat ./master.commit)@g" task-definition.json
-      - sed -i "s@ECS_CLUSTER_NAME@${ECS_CLUSTER_NAME}@g" service-definition.json
-      - sed -i "s@TARGET_GROUP_ARN@${TARGET_GROUP_ARN}@g" service-definition.json
-      - sed -i "s@ECS_SERVICE_ROLE@${ECS_SERVICE_ROLE}@g" service-definition.json
+      - sed -i "s@ECS_CLUSTER_NAME@${ECS_CLUSTER_NAME}@g" ecs/service.yaml
+      - sed -i "s@TAG@$(cat ./master.commit)@g" ecs/service.yaml
+      - sed -i "s@DOCKER_IMAGE_URI@$ECR_REPO:$(cat ./master.commit)@g" ecs/service.yaml
+      
   post_build:
     commands:
+      - docker images
+      - export AWS_DEFAULT_REGION=$AWS_REGION
       - $(aws ecr get-login --region $AWS_REGION)
+      - echo $ECR_REPO:$(cat ./master.commit)
       - docker push $ECR_REPO:$(cat ./master.commit)
+
 artifacts:
   files:
     - task-definition.json
     - service-definition.json
+    - ecs/service.yaml
     - master.commit
